#35 Add command line variables to SubServers
Also, a fix for #34